force-app/main/default/objects/Entitlement/fields/Engineering_Support_Hours__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Support_Hours__c</fullName>
    <description>SDS-1232 : Service: CUDA Support Services.
1. service program manager should be able to add/update Engineering Support Hours/Service Hours for the CUDA Support entitlement.</description>
    <label>Engineering Support Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>