force-app/main/default/objects/Entitlement/fields/Entitlement_ID_SAP__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_ID_SAP__c</fullName>
    <label>Entitlement ID (SAP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>