force-app/main/default/objects/Entitlement/fields/Entitlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Status__c</fullName>
    <formula>IF ( Text(Order_Type__c) = &apos;ZMRS&apos;  || Text(Order_Type__c) = &apos;ZKB&apos; , &quot;MRS&quot;,
	IF ( ISBLANK(SAP_Order__c) &amp;&amp; ISBLANK(Subscription__c), &quot;Removed&quot;,
		IF ( TODAY() &gt;= StartDate &amp;&amp; TODAY() &lt;= EndDate, &quot;Active&quot;,
			IF(StartDate &gt; TODAY(), &quot;Inactive&quot;, 
						&quot;Expired&quot;
			)
		)
	)
)</formula>
    <label>Entitlement Status</label>
    <type>Text</type>
</CustomField>