force-app/main/default/objects/Entitlement/fields/Environment_Profile__c.field-meta.xml
<CustomField>
    <fullName>Environment_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment Profile</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Environment_Profile__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Environment_Profile__c</referenceTo>
    <relationshipLabel>Entitlements</relationshipLabel>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>