force-app/main/default/objects/Entitlement/fields/Environment_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Environment_Profile_Name__c</fullName>
    <formula>Environment_Profile__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Environment Profile Name</label>
    <type>Text</type>
</CustomField>