force-app/main/default/objects/Entitlement/fields/ESP_Asset__c.field-meta.xml
<CustomField>
    <fullName>ESP_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ESP Asset</label>
    <referenceTo>ESP_Asset__c</referenceTo>
    <relationshipLabel>Entitlements</relationshipLabel>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>