force-app/main/default/objects/Entitlement/fields/Hardware_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Serial_Number__c</fullName>
    <label>Hardware Serial Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>