force-app/main/default/objects/Entitlement/fields/Hostname__c.field-meta.xml
<CustomField>
    <fullName>Hostname__c</fullName>
    <description>This field is to track Asset information and MRS entitlements data for Saturn V.</description>
    <label>Hostname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>