force-app/main/default/objects/Entitlement/fields/MRS_No_Subscription__c.field-meta.xml
<CustomField>
    <fullName>MRS_No_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MRS (Saturn V) field</description>
    <label>MRS (No Subscription)</label>
    <type>Checkbox</type>
</CustomField>