force-app/main/default/objects/Entitlement/fields/MRS_Product__c.field-meta.xml
<CustomField>
    <fullName>MRS_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MRS (Saturn V) field</description>
    <label>MRS Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>MRSEntitlements</relationshipLabel>
    <relationshipName>MRSEntitlements</relationshipName>
    <type>Lookup</type>
</CustomField>