force-app/main/default/objects/Entitlement/fields/MRS_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>MRS_Product_Code__c</fullName>
    <description>MRS (Saturn V) field</description>
    <label>MRS Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>