force-app/main/default/objects/Entitlement/fields/NVES_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>NVES_Product_Family__c</fullName>
    <description>Editable Product Family for manual Entitlement Creation - no corresponding Subscription - required for RMA</description>
    <label>NVES Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Family</valueSetName>
    </valueSet>
</CustomField>