force-app/main/default/objects/Entitlement/fields/NVIDIA_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_Sales_Order__c</fullName>
    <label>NVIDIA Sales Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>