force-app/main/default/objects/Entitlement/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZOR</fullName>
            </value>
            <value>
                <fullName>ZSO</fullName>
            </value>
            <value>
                <fullName>ZMRS</fullName>
            </value>
            <value>
                <fullName>ZRMA</fullName>
            </value>
            <value>
                <fullName>ZDO</fullName>
            </value>
            <value>
                <fullName>ZKB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>