force-app/main/default/objects/Entitlement/fields/PAK_ID__c.field-meta.xml
<CustomField>
    <fullName>PAK_ID__c</fullName>
    <label>PAK ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>