force-app/main/default/objects/Entitlement/fields/Partner_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Serial_Number__c</fullName>
    <inlineHelpText>Serial numbers for the Partner hardware</inlineHelpText>
    <label>Partner Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>