force-app/main/default/objects/Entitlement/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Created for backend purposes only.</description>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>