force-app/main/default/objects/Entitlement/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>Service_Product__r.ProductCode</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>