force-app/main/default/objects/Entitlement/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>TEXT( Service_Product__r.Family )</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>