force-app/main/default/objects/Entitlement/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>IF (MRS_No_Subscription__c = true, MRS_Product__r.Name, Subscription__r.SBQQ__ProductName__c)</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>