force-app/main/default/objects/Entitlement/fields/Product_Upgrade_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Product_Upgrade_Entitlement__c</fullName>
    <formula>if( Service_Product__r.ProductCode  = &apos;718-A180I1&apos;, True, False)</formula>
    <label>Product Upgrade Entitlement?</label>
    <type>Checkbox</type>
</CustomField>