force-app/main/default/objects/Entitlement/fields/Regular_Price__c.field-meta.xml
<CustomField>
    <fullName>Regular_Price__c</fullName>
    <label>Regular Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>