force-app/main/default/objects/Entitlement/fields/Renew_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Renew_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renew Entitlement</label>
    <type>Checkbox</type>
</CustomField>