force-app/main/default/objects/Entitlement/fields/Renewal_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>