force-app/main/default/objects/Entitlement/fields/Renewed_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewed Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Original Entitlements</relationshipLabel>
    <relationshipName>Original_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>