force-app/main/default/objects/Entitlement/fields/Renewed_Entitlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Entitlement_ID__c</fullName>
    <label>Renewed Entitlement ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>