force-app/main/default/objects/Entitlement/fields/Renewed_PAK_ID__c.field-meta.xml
<CustomField>
    <fullName>Renewed_PAK_ID__c</fullName>
    <description>Rename this to Renewed PAK ID if CPQ decides to use both PAK ID and Renewed PAK ID in future. Right now, CPQ is not populating any values in PAK ID.</description>
    <label>Renewed PAK ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>