force-app/main/default/objects/Entitlement/fields/SAP_Delivery_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Delivery_Number__c</fullName>
    <formula>SAP_Order__r.SAP_Delivery__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Delivery Number</label>
    <type>Text</type>
</CustomField>