force-app/main/default/objects/Entitlement/fields/SAP_Order__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAP Order</label>
    <referenceTo>SAP_Order__c</referenceTo>
    <relationshipLabel>Entitlements</relationshipLabel>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>