force-app/main/default/objects/Entitlement/fields/Service_Product__c.field-meta.xml
<CustomField>
    <fullName>Service_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created to store Product lookup copied from Subscription or manually entered for MRS Products.</description>
    <label>Service Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Entitlements (Service Product)</relationshipLabel>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>