force-app/main/default/objects/Entitlement/fields/Support_Hours_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Support_Hours_Delivered__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SDS-1232 : Service: CUDA Support Services
1.	Hours from Closed case will roll to Service Hours Delivered</description>
    <label>Support Hours Delivered</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>