force-app/main/default/objects/Entitlement/fields/Support_Hours_WIP__c.field-meta.xml
<CustomField>
    <fullName>Support_Hours_WIP__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SDS-1232 : Service: CUDA Support Services
2.	Hours from not closed cases will roll up to Service Hours WIP</description>
    <label>Support Hours WIP</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>