force-app/main/default/objects/Entitlement/fields/Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Support_Level__c</fullName>
    <formula>Text(Service_Product__r.Support_level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Level</label>
    <type>Text</type>
</CustomField>