force-app/main/default/objects/Entitlement/fields/Total_Consumed_Engineering_Support_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Consumed_Engineering_Support_Hours__c</fullName>
    <formula>Support_Hours_Delivered__c + Support_Hours_WIP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Consumed Engineering Support Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>