force-app/main/default/objects/Entitlement/validationRules/PAKID_or_Harware_Serial_Number_required.validationRule-meta.xml
<ValidationRule>
    <fullName>PAKID_or_Harware_Serial_Number_required</fullName>
    <active>true</active>
    <description>Service Cloud : PAK ID or SNo is required in order to save the Entitlement.</description>
    <errorConditionFormula>ISBLANK( PAK_ID__c ) &amp;&amp; ISBLANK( Hardware_Serial_Number__c )</errorConditionFormula>
    <errorMessage>PAK ID or Hardware Serial Number is required.</errorMessage>
</ValidationRule>