force-app/main/default/objects/Entitlement/listViews/All_Entitlements.listView-meta.xml
<ListView>
    <fullName>All_Entitlements</fullName>
    <columns>ENTITLEMENT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ENTITLEMENT.STARTDATE</columns>
    <columns>ENTITLEMENT.ENDDATE</columns>
    <columns>Entitlement_Status__c</columns>
    <columns>Street_1__c</columns>
    <columns>Street_2__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Postal_Code__c</columns>
    <columns>Country__c</columns>
    <columns>ENTITLEMENT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Entitlements</label>
</ListView>