force-app/main/default/objects/Entitlement/listViews/All_Entitlements2.listView-meta.xml
<ListView>
    <fullName>All_Entitlements2</fullName>
    <columns>ENTITLEMENT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ENTITLEMENT.STARTDATE</columns>
    <columns>ENTITLEMENT.ENDDATE</columns>
    <columns>Entitlement_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Entitlements</label>
    <language>en_US</language>
</ListView>