force-app/main/default/objects/Entitlement/listViews/Update_Entitlement_Address.listView-meta.xml
<ListView>
    <fullName>Update_Entitlement_Address</fullName>
    <columns>ENTITLEMENT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ENTITLEMENT.STATUS</columns>
    <columns>Street_1__c</columns>
    <columns>Street_2__c</columns>
    <columns>Street_3__c</columns>
    <columns>Street_4__c</columns>
    <columns>City__c</columns>
    <columns>Zip_Postal_Code__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Samsung Electronics Co Ltd</value>
    </filters>
    <label>Update Entitlement Address</label>
</ListView>